# llm-rag-play

./: .env.example  .gitignore  Cargo.toml  README.md  architecture.md  justfile
src/: chunking.rs  context.rs  database.rs  document.rs  embeddings.rs  gemini.rs  lib.rs  main.rs  rag.rs
src/chunking/: mod.rs
src/database/: mod.rs
src/embeddings/: mod.rs
src/rag/: mod.rs
