[package]
name = "gemini-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Qdrant client for vector database
qdrant-client = "1.6"

# HTTP client for API requests
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# gRPC framework
tonic = "0.12"
